2010-11-29  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        DumpRenderTree changes for testing the text search API.
        https://bugs.webkit.org/show_bug.cgi?id=50038

        * DumpRenderTree/LayoutTestController.cpp:
        (findStringCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::findString):
        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController find:]):

2010-11-29  Johnny Ding  <jnd@chromium.org>

        Unreviewed: Add myself to the list of Committers.

        * Scripts/webkitpy/common/config/committers.py:

2010-11-29  Mark Rowe  <mrowe@apple.com>

        Reviewed by Adele Peterson.

        <rdar://problem/8694997> DumpRenderTree fails to build.

        * DumpRenderTree/mac/PerlSupport/Makefile: Skip generating wrappers.

2010-11-29  Mark Rowe  <mrowe@apple.com>

        Reviewed by Adele Peterson.

        <rdar://problem/8694997> DumpRenderTree fails to build.

        * DumpRenderTree/mac/PerlSupport/DumpRenderTreeSupportPregenerated.pm: Renamed from WebKitTools/DumpRenderTree/mac/PerlSupport/DumpRenderTreeSupportTiger.pm.
        * DumpRenderTree/mac/PerlSupport/DumpRenderTreeSupport_wrapPregenerated.c: Renamed from WebKitTools/DumpRenderTree/mac/PerlSupport/DumpRenderTreeSupport_wrapTiger.c.
        * DumpRenderTree/mac/PerlSupport/Makefile:

2010-11-29  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Null-check needed in DRT's AccessibilityUIElement::allAtributes()
        https://bugs.webkit.org/show_bug.cgi?id=50154

        Added missing checks to allAttributes().

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::allAttributes): Added missing checks.

2010-11-29  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
